--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,60 +1,63 @@
-title: "HDJ-TO-Hemato"
-subtitle: "Rapport Statistique"
+project:
+  type: website
+  output-dir: "docs"
+date: today
 lang: fr
+language:
+  title-block-author-single: "Auteur"
 author:
-  - name: "Dr Philippe MICHEL"
+  - name: "D<sup>r</sup> Philippe MICHEL"
+    orcid: "0000-0003-2392-7186"
+    email: "philippe.michel@ght-novo.fr"
+    role: "Statisticien"
     affiliations:
-      name: "Hôpital NOVO"
-      department: "Unité de Soutien à la Recherche Clinique"
+        name: "USRC - Hôpital NOVO"
+        city: Pontoise
+        department: "Unité de Soutien à la Recherche Clinique"
+  - name: "M<sup>me</sup> Delphine DUVAL"
+    affiliations:
+        name: "Hôpital NOVO"
+        city: Pontoise
+        department: "Service d'hématologie"
+website:
+  image: novo_usrc.png
+  title: "HDJ-TO-Hémato"
+  page-navigation: true
+  search:
+    location: sidebar
+    type: textbox
+  navbar:
+    logo: novo_usrc.png
+    background: primary
+    search: true
+    left:
+      - text: "        Généralités"
+        href: index.qmd
+      - text: "Plan d'analyse"
+        href: plan_analyse.qmd
+      - text: "Rapport statistique"
+        href: rapport.qmd
+    right:
+      - icon: github
+        href: https://github.com/philippemichel
+      - icon: twitter
+        href: https://twitter.com/PhiippeMICHEL
+      - icon: mailbox
+        text: mail
+        href: mailto:philippe.michel@ght-novo.fr
+  open-graph:
+    locale: fr_FR
 format:
- titlepage-pdf:
-  titlepage: bg-image
-  titlepage-bg-image: "novo_usrc.png"
-  logo-space-after: "0\\baselineskip"
-  titlepage-include-file:
-    - generique.tex
-  documentclass: scrreprt
-  number-sections: true
-  titlepage-footer: "\\today"
-titlepage-theme:
-  title-fontstyle: ["Huge", "bfseries"]
-  title-color: novo
-  subtitle-color: novo
-  subtitle-fontstyle: ["huge"]
-  logo-size: "0.2\\textheight"
-  vrule-width: "0.1cm"
-  vrule-color: novo
-include-in-header:
-   text: |
-    \definecolor{novo}{HTML}{27484b}
-    \usepackage[locale = FR, per-mode = symbol]{siunitx}
-    \usepackage[section]{placeins}
-    \usepackage{arsenal}
-    \usepackage{hyperref}
-    \usepackage[abbreviations, numberedsection, automake,toc]{glossaries-extra}
-    \usepackage{glossaries-babel}
-    \setabbreviationstyle{long-short-sc}
-    \loadglsentries{listacro}
-    \makeglossaries
-    \usepackage{tcolorbox}
-    \newcommand{\doc}{D\textsuperscript{r} }
-    \newcommand{\mme}{M\textsuperscript{me} }
-df-print : kable
-pdf-engine: lualatex
-keep-tex: true
-number-sections: true
+    html:
+      code-fold: true
+      page-layout: full
+      highlight-style: ayu
+      theme:
+        light:
+          - sandstone
+          - style.scss
+        dark: cyborg
+      fontsize: 1.2em
 toc: true
-lof: true
-lot: true
-fig-cap-location: bottom
-tbl-cap-location: top
-classoption: [french]
-papersize: a4
-editor: source
-bibliography: stat.bib
-cite-method: biblatex
-license: "MIT"
-echo: false
 warning: false
 message: false
-cache: false
