--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,6 @@ d# History files
 # Session Data files
 .RData
 .RDataTmp
-# User-specific files
-.Ruserdata
-# Example code in package build process
-*-Ex.R
-# Output files from R CMD build
-/*.tar.gz
-# Output files from R CMD check
-/*.Rcheck/
-# RStudio files
-.Rproj.user/
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
 # knitr and R markdown default cache directories
 *_cache/
 /cache/
@@ -33,21 +18,14 @@ po/*~
 # RStudio Connect folder
 rsconnect/
 /.quarto/
-_extensions
 *.pdf
 *.gl*
 *.ist
 *.xdy
 HDJ-TO-Hemato.Rproj
 data/
-generique.tex
-generique.tex~
-nb_cas.tex
-*.tex~
-plan_analyse.tex
-rapport_hdj_hemato.tex
+*.tex
 README_files
-README.tex
 tmp-pdfcrop-*.tex
 fig.zip
 
